--- a/package.json
+++ b/package.json
@@ -4,8 +4,8 @@
   "description": "",
   "main": "index.js",
   "scripts": {
-    "start": "supervisor 1-10-bandit-lord.js",
-    "cata": "supervisor catacombs.js"
+    "1-10": "supervisor 1-10-bandit-lord.js",
+    "start": "supervisor src/tk.js"
   },
   "author": "",
   "license": "ISC",
